--- a/src/index.html
+++ b/src/index.html
@@ -1,225 +1,152 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
-<html lang="en" class="sr">
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
-    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
+    <!-- Put here your site title -->
+    <title>My portfolio</title>
+    <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
-    <!-- Todo: improve your SEO by adding a small description of you -->
+    <!-- Improve your SEO by adding a small descrption of you -->
     <meta name="description" content="[Your name here] | Developer" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="styles.scss" />
-    <script
-      defer
-      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
-    ></script>
+    <!-- Required librarys -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        ScrollReveal({
+            reset: false
+        });
+    </script>
 
-    <!-- Todo: remove the below script once you finish your portfolio -->
+    <!-- Remove this script once you setup your custom portfolio -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
+</head>
 
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
-  <body>
+<!-- Follow the HTML instructions to create your stunning portfolio website -->
+
+<body>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
-    <section id="hero" class="jumbotron">
-      <div class="container">
-        <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
-          <br />
-          I'm the Unknown Developer.
-        </h1>
-        <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
-          >
-        </p>
-      </div>
-    </section>
+    <div id="hero" class="jumbotron">
+        <div class="container">
+            <h1 class="hero-title" class="load-hidden">
+                Hi, my name is <span class="text-color-main">Kelvin Rumani</span>
+                <br /> I'm a Software Engineer.
+            </h1>
+            <p class="hero-cta" class="load-hidden">
+                <a class="cta-btn cta-btn--hero" href="#about">About me</a>
+            </p>
+        </div>
+    </div>
     <!-- /END Hero Section -->
 
     <!-- **** About Section **** -->
     <section id="about">
-      <div class="container">
-        <h2 class="section-title load-hidden">About me</h2>
-        <div class="row about-wrapper">
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image load-hidden">
-              <img
-                alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="assets/profile.jpg"
-                alt="Profile Image"
-              />
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__info load-hidden">
-              <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
-              </p>
-              <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
-              </p>
-              <span class="d-flex mt-3">
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
-                >
+        <div class="container">
+            <h2 class="section-title">About me</h2>
+            <div class="row about-wrapper">
+                <div class="col-md-6 col-sm-12">
+                    <div class="about-wrapper__image">
+                        <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="./assets/profile.jpg" alt="Profile Image" />
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="about-wrapper__info">
+                        <p class="about-wrapper__info-text">
+                            I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things. My favorite programming languages are Java and JavaScript but recently i am also learnin
+                            React.
+                        </p>
+                        <p class="about-wrapper__info-text">
+
+                        </p>
+                        <span class="d-flex mt-3">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="resume.pdf">
                   View Resume
                 </a>
               </span>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </section>
     <!-- /END About Section -->
 
     <!-- **** Projects Section **** -->
     <section id="projects">
-      <div class="container">
-        <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+        <div class="container">
+            <div class="project-wrapper">
+                <h2 class="section-title dark-blue-text">Projects</h2>
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
+                <!-- Each row is a project -->
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                            <h3 class="project-wrapper__text-title">Notes App</h3>
+                            <div>
+                                <p class="mb-4">
+                                    This is a notes Android app made with Android Studio and Java.
+                                </p>
+                            </div>
+                            <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/kelvin30/Notes-app/blob/main/notes1.jpg">
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
+                            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kelvin30/Notes-app">
                   Source Code
                 </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
-                <div>
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
-                  </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                            <a href="#!" target="_blank">
+                                <div data-tilt class="thumbnail rounded">
+                                    <img class="img-fluid" src="./assets/notes.jpg" />
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
+                <!-- /END Project -->
+
+                <!-- Each .row is a project -->
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                            <h3 class="project-wrapper__text-title">Robo Friends</h3>
+                            <div>
+                                <p class="mb-4">
+                                    A simple WebApp made with React.
+                                </p>
+                            </div>
+                            <a target="_blank" class="cta-btn cta-btn--hero" href="https://kelvin30.github.io/robofriends-master/">
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
+                            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kelvin30/robofriends-master">
                   Source Code
                 </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                            <a href="#!" target="_blank">
+                                <div data-tilt class="thumbnail rounded">
+                                    <img class="img-fluid" src="./assets/robot.jpg" />
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
+                <!-- Each .row is a project -->
+                <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
                 <div>
                   <p class="mb-4">
@@ -230,62 +157,37 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
+                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
                   See Live
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
+                <a target="_blank" class="cta-btn text-color-main" href="#!">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
-                    />
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/notes.jpg" />
                   </div>
                 </a>
               </div>
             </div>
-          </div>
-          <!-- /END Project -->
+          </div> -->
+                <!-- /END Project -->
+            </div>
         </div>
-      </div>
     </section>
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
-      <div class="container">
-        <h2 class="section-title">Contact</h2>
-        <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+        <div class="container">
+            <h2 class="section-title">Contact</h2>
+            <div class="contact-wrapper">
+                <p class="contact-wrapper__text"></p>
+                <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:kelvin.rumani@gmail.com">Email</a
           >
         </div>
       </div>
@@ -295,35 +197,37 @@
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
+        <a href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-        <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+                <div class="social-links">
+                    <!-- <a href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-github fa-inverse"></i>
-          </a>
-        </div>
+          </a> -->
+                    <!-- <a href="#!" target="_blank">
+            <i class="fa fa-codepen fa-inverse"></i>
+          </a> -->
+                    <a href="https://www.linkedin.com/in/kelvin-rumani-4185b0198/" target="_blank">
+                        <i class="fa fa-linkedin fa-inverse"></i>
+                    </a>
+                    <a href="https://github.com/kelvin30" target="_blank">
+                        <i class="fa fa-github fa-inverse"></i>
+                    </a>
+                </div>
 
-        <hr />
+                <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
+                <!-- If you give me some credit, will be huge for me :) -->
+                <!-- <p class="footer__text">
+          © 2020 - Template developed by
+          <a href="https://github.com/cobidev" target="_blank"
             >Jacobo Martínez</a
           >
-        </p>
+        </p> -->
 
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
+                <!-- Remove this paragraph once you setup your custom portfolio -->
+                <!-- <p class="mt-3 pt-3">
           <a
-            rel="noreferrer"
             class="github-button"
             href="https://github.com/cobidev/simplefolio/fork"
             data-icon="octicon-repo-forked"
@@ -331,22 +235,19 @@
             data-show-count="true"
             aria-label="Fork ntkme/github-buttons on GitHub"
             >Fork</a
-          >
-          <a
-            rel="noreferrer"
+          > -->
+                <!-- <a
             class="github-button"
             href="https://github.com/cobidev/simplefolio"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
             aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
-      </div>
-    </footer>
-    <!-- /END Footer Section -->
+            >Star</a>  -->
+                </p>
+            </div>
+            </footer>
+            <!-- /END Footer Section -->
+</body>
 
-    <script defer type="module" src="index.js"></script>
-  </body>
 </html>
