--- a/src/index.html
+++ b/src/index.html
@@ -1,152 +1,217 @@
+<!--
+  Hello!
+  -
+  Simplefolio is a clean and responsive portfolio template for Developers!
+  Created by Jacobo Martinez.
+  -
+  Github Repo: https://github.com/cobidev/simplefolio/
+  Readme: https://github.com/cobidev/simplefolio/README.md
+  -
+  For business & inquires, contact me -> jacobojavier98@gmail.com
+-->
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en" class="sr">
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Put here your site title -->
-    <title>My portfolio</title>
-    <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
+    <!-- Todo: put here your site title -->
+    <title>Kelvin Rumani | Developer</title>
+    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
-    <!-- Improve your SEO by adding a small descrption of you -->
+    <!-- Todo: improve your SEO by adding a small description of you -->
     <meta name="description" content="[Your name here] | Developer" />
 
-    <!-- Required librarys -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script>
-        ScrollReveal({
-            reset: false
-        });
-    </script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="styles.scss" />
+    <script
+      defer
+      src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
+    ></script>
 
-    <!-- Remove this script once you setup your custom portfolio -->
+    <!-- Todo: remove the below script once you finish your portfolio -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-</head>
+  </head>
 
-<!-- Follow the HTML instructions to create your stunning portfolio website -->
-
-<body>
+  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
+  <body>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
-    <div id="hero" class="jumbotron">
-        <div class="container">
-            <h1 class="hero-title" class="load-hidden">
-                Hi, my name is <span class="text-color-main">Kelvin Rumani</span>
-                <br /> I'm a Software Engineer.
-            </h1>
-            <p class="hero-cta" class="load-hidden">
-                <a class="cta-btn cta-btn--hero" href="#about">About me</a>
-            </p>
-        </div>
-    </div>
+    <section id="hero" class="jumbotron">
+      <div class="container">
+        <h1 class="hero-title load-hidden">
+          Hi, my name is <span class="text-color-main">Kelvin Rumani</span>
+          <br />
+          I'm a Software Engineer.
+        </h1>
+        <p class="hero-cta load-hidden">
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
+            >Know more</a
+          >
+        </p>
+      </div>
+    </section>
     <!-- /END Hero Section -->
 
     <!-- **** About Section **** -->
     <section id="about">
-        <div class="container">
-            <h2 class="section-title">About me</h2>
-            <div class="row about-wrapper">
-                <div class="col-md-6 col-sm-12">
-                    <div class="about-wrapper__image">
-                        <img class="img-fluid rounded shadow-lg" height="auto" width="300px" src="./assets/profile.jpg" alt="Profile Image" />
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12">
-                    <div class="about-wrapper__info">
-                        <p class="about-wrapper__info-text">
-                            I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things. My favorite programming languages are Java and JavaScript but recently i am also learnin
+      <div class="container">
+        <h2 class="section-title load-hidden">About me</h2>
+        <div class="row about-wrapper">
+          <div class="col-md-6 col-sm-12">
+            <div class="about-wrapper__image load-hidden">
+              <img
+                alt="Profile Image"
+                class="img-fluid rounded shadow-lg"
+                height="auto"
+                width="300px"
+                src="assets/profile.jpg"
+                alt="Profile Image"
+              />
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="about-wrapper__info load-hidden">
+              <p class="about-wrapper__info-text">
+                I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things. My favorite programming languages are Java and JavaScript but recently i am also learnin
                             React.
-                        </p>
-                        <p class="about-wrapper__info-text">
-
-                        </p>
-                        <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="resume.pdf">
+              </p>
+              <p class="about-wrapper__info-text">
+                
+              </p>
+              <span class="d-flex mt-3">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="assets/resume.pdf"
+                >
                   View Resume
                 </a>
               </span>
-                    </div>
-                </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
     <!-- /END About Section -->
 
     <!-- **** Projects Section **** -->
     <section id="projects">
-        <div class="container">
-            <div class="project-wrapper">
-                <h2 class="section-title dark-blue-text">Projects</h2>
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Projects</h2>
 
-                <!-- Each row is a project -->
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <div class="project-wrapper__text">
-                            <h3 class="project-wrapper__text-title">Notes App</h3>
-                            <div>
-                                <p class="mb-4">
-                                    This is a notes Android app made with Android Studio and Java.
-                                </p>
-                            </div>
-                            <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/kelvin30/Notes-app/blob/main/notes1.jpg">
-                  See Live
-                </a>
-                            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kelvin30/Notes-app">
-                  Source Code
-                </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="project-wrapper__image">
-                            <a href="#!" target="_blank">
-                                <div data-tilt class="thumbnail rounded">
-                                    <img class="img-fluid" src="./assets/notes.jpg" />
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- /END Project -->
-
-                <!-- Each .row is a project -->
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12">
-                        <div class="project-wrapper__text">
-                            <h3 class="project-wrapper__text-title">Robo Friends</h3>
-                            <div>
-                                <p class="mb-4">
-                                    A simple WebApp made with React.
-                                </p>
-                            </div>
-                            <a target="_blank" class="cta-btn cta-btn--hero" href="https://kelvin30.github.io/robofriends-master/">
-                  See Live
-                </a>
-                            <a target="_blank" class="cta-btn text-color-main" href="https://github.com/kelvin30/robofriends-master">
-                  Source Code
-                </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="project-wrapper__image">
-                            <a href="#!" target="_blank">
-                                <div data-tilt class="thumbnail rounded">
-                                    <img class="img-fluid" src="./assets/robot.jpg" />
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- /END Project -->
-
-                <!-- Each .row is a project -->
-                <!-- <div class="row">
+          <!-- Notice: each .row is a project -->
+          <div class="row">
             <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Notes App</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a notes Android app made with Android Studio and Java.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/kelvin30/Notes-app/blob/main/notes1.jpg"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kelvin30/Notes-app"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/notes.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Robo Friends</h3>
+                <div>
+                  <p class="mb-4">
+                    A simple WebApp made with React.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://kelvin30.github.io/robofriends-master/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kelvin30/robofriends-master"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/robot.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <!-- <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
                 <div>
                   <p class="mb-4">
@@ -157,37 +222,62 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="#!"
+                >
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/notes.jpg" />
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project.jpg"
+                    />
                   </div>
                 </a>
               </div>
             </div>
           </div> -->
-                <!-- /END Project -->
-            </div>
+          <!-- /END Project -->
         </div>
+      </div>
     </section>
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
-        <div class="container">
-            <h2 class="section-title">Contact</h2>
-            <div class="contact-wrapper">
-                <p class="contact-wrapper__text"></p>
-                <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:kelvin.rumani@gmail.com">Email</a
+      <div class="container">
+        <h2 class="section-title">Contact</h2>
+        <div class="contact-wrapper load-hidden">
+          <p class="contact-wrapper__text"></p>
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            href="mailto:kelvin.rumani@gmail.com"
+            >Email</a
           >
         </div>
       </div>
@@ -197,37 +287,35 @@
     <!-- **** Footer Section **** -->
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a href="#top" class="back-to-top">
+        <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
-                <div class="social-links">
-                    <!-- <a href="#!" target="_blank">
+        <div class="social-links">
+          <!-- <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a> -->
-                    <!-- <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a> -->
-                    <a href="https://www.linkedin.com/in/kelvin-rumani-4185b0198/" target="_blank">
-                        <i class="fa fa-linkedin fa-inverse"></i>
-                    </a>
-                    <a href="https://github.com/kelvin30" target="_blank">
-                        <i class="fa fa-github fa-inverse"></i>
-                    </a>
-                </div>
+          <a rel="noreferrer" href="https://www.linkedin.com/in/kelvin-rumani-4185b0198/" target="_blank">
+            <i class="fa fa-linkedin fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://github.com/kelvin30" target="_blank">
+            <i class="fa fa-github fa-inverse"></i>
+          </a>
+        </div>
 
-                <hr />
+        <hr />
 
-                <!-- If you give me some credit, will be huge for me :) -->
-                <!-- <p class="footer__text">
-          © 2020 - Template developed by
-          <a href="https://github.com/cobidev" target="_blank"
+        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
+        <!-- <p class="footer__text">
+          © 2021 - Template developed by
+          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
             >Jacobo Martínez</a
           >
         </p> -->
 
-                <!-- Remove this paragraph once you setup your custom portfolio -->
-                <!-- <p class="mt-3 pt-3">
+        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
+        <!-- <p class="mt-3 pt-3">
           <a
+            rel="noreferrer"
             class="github-button"
             href="https://github.com/cobidev/simplefolio/fork"
             data-icon="octicon-repo-forked"
@@ -235,19 +323,22 @@
             data-show-count="true"
             aria-label="Fork ntkme/github-buttons on GitHub"
             >Fork</a
-          > -->
-                <!-- <a
+          >
+          <a
+            rel="noreferrer"
             class="github-button"
             href="https://github.com/cobidev/simplefolio"
             data-icon="octicon-star"
             data-size="large"
             data-show-count="true"
             aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a>  -->
-                </p>
-            </div>
-            </footer>
-            <!-- /END Footer Section -->
-</body>
+            >Star</a
+          >
+        </p> -->
+      </div>
+    </footer>
+    <!-- /END Footer Section -->
 
+    <script defer type="module" src="index.js"></script>
+  </body>
 </html>
