--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >About</a
           >
         </p>
       </div>
