--- a/src/index.html
+++ b/src/index.html
@@ -208,6 +208,56 @@
           </div>
           <!-- /END Project -->
 
+           <!-- Notice: each .row is a project -->
+           <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Focus Time</h3>
+                <div>
+                  <p class="mb-4">
+                    Cross-Platform app made with React-Native.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://user-images.githubusercontent.com/39619237/155337705-2ce86169-0c97-4bd3-828d-71b7bef01055.jpg"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/kelvin30/focustime"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/react.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
           <!-- Notice: each .row is a project -->
           <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
