--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
            <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Notes App</h3>
+                <h3 class="project-wrapper__text-title">Meals To Go</h3>
                 <div>
                   <p class="mb-4">
                     Meals To Go is also a Cross-Platform app made with React-Native.
