notes and meals

--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://expo.dev/accounts/kelvin9797/projects/MealsToGo"
+                  href="https://expo.dev/@kelvin9797/MealsToGo?serviceType=classic&distribution=expo-go"
                 >
                   See Live
                 </a>
