--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/robot.png"
+                      src="assets/robot.jpg"
                     />
                   </div>
                 </a>
