--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things. My favorite programming languages are Java and JavaScript but recently i am also learnin
-                            React.
+                I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things.
+                            
               </p>
               <p class="about-wrapper__info-text">
                 
@@ -427,6 +427,7 @@
       </div>
     </footer>
     <!-- /END Footer Section -->
+
 
     <script defer type="module" src="index.js"></script>
   </body>
