--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm Kelvin Rumani, graduated in Software Engineering with a strong desire to code. I'm a very friendly and collaborative person ready to work and learn new things.
-                            
+                I'm Kelvin Rumani, graduated in Software Engineering and specialized on Front-End development. 
+                I'm a very collaborative person and very enthusiastic to learn new things.
+                I like to work in teams, I easily adapt to the environment and colleagues and also like to solve Front-End problems.
+                During my work experience until now I have been working with frameworks and programmin languages like React JS, React-Native, Javascript and Java.             
               </p>
               <p class="about-wrapper__info-text">
                 
